--- a/_posts/2018-12-19-Access.md
+++ b/_posts/2018-12-19-Access.md
@@ -95,7 +95,7 @@ Investigating this property further with the Windows `cmdkey /list` command, it 
 
 Continuing enumeration, the `ZKAccess3.5 Security System.lnk` shortcut file found on the Public user's desktop suggests that commands can be run as the Administrator using the `runas` Windows command along with the `/savecred` flag. The `runas` command can be used to run a Windows command as another system user. 
 
-![cmdkey](/assets/images/htb/access/cmdkey.png)
+![savecred_link](/assets/images/htb/access/savecred_link.png)
 
 Putting these pieces together, it is clear that system commands can be run as the Administrator user if the `/savecred` flag is included as part of the `runas` command. The fact that the Administrator does not need a password to logon to the system, that the Administrator user has a stored credential on the system, and that `runas` command with the `/savecred` flag is being used on the system suggests a possible privelege elevation scenario.
 
