--- a/_posts/2018-12-19-Access.md
+++ b/_posts/2018-12-19-Access.md
@@ -97,7 +97,7 @@ Continuing enumeration, the `ZKAccess3.5 Security System.lnk` shortcut file foun
 
 ![savecred_link](/assets/images/htb/access/savecred_link.png)
 
-Putting these pieces together, it is clear that system commands can be run as the Administrator user if the `/savecred` flag is included as part of the `runas` command. The fact that the Administrator does not need a password to logon to the system, that the Administrator user has a stored credential on the system, and that `runas` command with the `/savecred` flag is being used on the system suggests a possible privelege elevation scenario.
+Putting these pieces together, it is clear that system commands can be run as the Administrator user if the `/savecred` flag is included as part of the `runas` command. The fact that the Administrator does not need a password to logon to the system, that the Administrator user has a stored credential on the system, and that the `runas` command with the `/savecred` flag is being used on the system suggests a possible privelege elevation scenario.
 
 To leverage this situtation, `nc.exe` can be transferred to the target system and then used to obtain a reverse shell that connects to the attacking machine.
 
