--- a/_posts/2018-12-19-Access.md
+++ b/_posts/2018-12-19-Access.md
@@ -47,7 +47,7 @@ As files with the `.mdb` extension are not commonly used in Linux environments, 
 
 As the content within the `auth_user` table appears to contain username-password combinations, the username-password pairs were used in attempts to access the Telnet server running on TCP port 23 of the target system, but to no avail. Time to look elsewhere.
 
-Moving on to the second file retreived from the FTP server, the `'Access Control.zip'` file can be unziped using the `7z` tool, as shown below.
+Moving on to the second file retreived from the FTP server, the `'Access Control.zip'` file can be unzipped using the `7z` tool, as shown below.
 
 ```
 root@kali:~/workspace/hackthebox/Access# 7z x 'Access Control.zip'
