--- a/_posts/2018-12-16-Irked.md
+++ b/_posts/2018-12-16-Irked.md
@@ -39,9 +39,9 @@ Using this information, a second scan was run using `nmap` to more thoughoughly 
 root@kali:~/workspace/hackthebox/Access# nmap -p 8067,65534,80,111,22,50167,6697 -sC -sV -oA scans/discovered-tcp 10.10.10.117
 ```
 
-While this scan is running, it's a good idea to check out what might be happening on well-known ports such as the HTTP port TCP 80.
+Note that while this scan is running, it's a good idea to check out what might be happening on well-known ports such as the HTTP port TCP 80. In this case, it appears the only item present on the webserver is the `irked.jpg` image which is shown below.
 
-
+![irked_jpg](/assets/images/htb/irked/irked_jpg.png)
 
 The results of the nmap scan revealed some interesting services listening on some uncommon ports, which suggest a good starting place for further enumeration. Note that in general, it is wise to take a broad approach during the initial enumeration process. That is to say that basic enumeration of each listening service should be completed before moving on to more focused enumeration of any particular service. In this write-up, the basic enumeration techniques are not discussed. A screenshot of the result of the nmap scan is shown below.
 
@@ -53,7 +53,7 @@ Using an IRC client such as `hexchat`, the IRC service listening on port 6697 ca
 
 ![irc_version](/assets/images/htb/irked/irc_version.png)
 
-SLesser-known and outdated services are often vulnerable to exploitation. The `searchsploit` tool can be used to search for exploits relevant to a given service. Now that the version of UnrealIRCd running on the target server is known, the command shown below can be used to search for vulnerabliities and exploits relevant to UnrealIRCd 3.2.8.1.
+Lesser-known and outdated services are often vulnerable to exploitation. The `searchsploit` tool can be used to search for exploits relevant to a given service. Now that the version of UnrealIRCd running on the target server is known, the command shown below can be used to search for vulnerabliities and exploits relevant to UnrealIRCd 3.2.8.1.
 
 ```
 root@kali:~/workspace/hackthebox/Irked# searchsploit "UnrealIRCd 3.2.8.1"
@@ -80,7 +80,31 @@ UPupDOWNdownLRlrBAbaSSss
 
 For those unfamiliar with steg, the word "steg" is short for "steganography" and is the practice of concealing a file, message, image, or video within another file, message, image or video. The contents of the `.backup` file in the home directory of `djmardov` suggets that there must be some information hidden in another file, and that `UPupDOWNdownLRlrBAbaSSss` must be the password to access the information.
 
+A useful Linux tool for working with stegonagrphy is `steghide`. If necessary, this tool can be installed using `apt-get install steghide`. The `steghide` command shown below can be run against the `irked.jpg` image found on the webserver.
 
+```
+root@kali:~/workspace/hackthebox/Irked# steghide info irked.jpg
+```
+
+Upon running this command, the program prompts for a password, for which `UPupDOWNdownLRlrBAbaSSss` should be given, revealing the information shown below.
+
+![steghide_info](/assets/images/htb/irked/steghide_info.png)
+
+The embedded `pass.txt` file can be extracted with the following command.
+
+```
+root@kali:~/workspace/hackthebox/Irked# steghide extract -sf irked.jpg -p 
+```
+
+The `pass.txt` file can now be read and contains the data shown below.
+
+```
+Kab6h+m+bbp2J:HG
+```
+
+Returning to the target system, the password shown above can be used to switch to the `djmardov` user with the `su` command. The `user.txt` file can now be read.
+
+![user_txt](/assets/images/htb/irked/user_txt.png)
 
 ## Root
-exit
+
