--- a/_posts/2018-12-16-Irked.md
+++ b/_posts/2018-12-16-Irked.md
@@ -130,7 +130,7 @@ Running the `viewuser` binary displays some interesting output.
 
 First of all, it appears that this is a custom binary that is still being developed. Secondly, it appears that the program attempts to interact with the `/tmp/listusers` file (which as suggested by the output does not exist). 
 
-Knowing that `viewuser` is run with `root` permission and that it interacts with a nonexistent `listusers` file in the `/tmp` directory suggests a disasterous outcome as the `/tmp` directory is world writable.
+Knowing that `viewuser` is run with `root` permission and that it interacts with a nonexistent `listusers` file in the `/tmp` directory suggests a disasterous outcome, as the `/tmp` directory is world writable. This is to say that any user on the system can write to the `/tmp` directory, and therefore any user can create a `listusers` file.
 
 To test whether the `viewuser` binary will execute code from within the `/tmp/listusers` file, a simple `ping` test can be performed. A `listusers` executable file can be written to the `/tmp` directory.
 
