--- a/_posts/2018-12-16-Irked.md
+++ b/_posts/2018-12-16-Irked.md
@@ -10,8 +10,10 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 
 ![irked_info.png](/assets/images/htb/irked/irked_info.png)
 
+*Note: I completed this challenge on December 16th, 2018, however I'm just now writing it up in December 2019. As such, some of the details are sparse.*
+
 ## User
-To begin the enumeration process, a port scan was run against the target using `masscan`. The purpose of this intial scan is to quickly determine which ports are open so that a more focused `nmap` scan can be performed that will target only the open ports discovered by `masscan`.
+To begin the enumeration process, a port scan was run against the target using `masscan`. The purpose of this initial scan is to quickly determine which ports are open so that a more focused `nmap` scan can be performed that will target only the open ports discovered by `masscan`.
 
 ```
 root@kali:~/workspace/hackthebox/Access# masscan -e tun0 -p 1-65535 --rate 2000 10.10.10.117
