--- a/_posts/2018-12-25-SecNotes.md
+++ b/_posts/2018-12-25-SecNotes.md
@@ -1,5 +1,5 @@
 ---
-title: "HTB Write-up: Resolute"
+title: "HTB Write-up: SecNotes"
 date: 2018-12-25
 category: [HackTheBox]
 tags: [HackTheBox, HTB, windows, ]
@@ -8,81 +8,66 @@ header:
 ---
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
-![access_info](/assets/images/htb/access/access_info.png)
+![secnotes_info.png](/assets/images/htb/access/secnotes_info.png)
+
+*Note: I completed this challenge on December 25th, 2018, however I'm just now writing it up in December 2019. As such, some of the details are sparse.*
 
 ## User
-To begin the enumeration process, a port scan was run against the target using `masscan`. The purpose of this intial scan is to quickly determine which ports are open so that a more focused `nmap` scan can be performed that will target only the open ports discovered by `masscan`.
+To begin the enumeration process, a port scan was run against the target using `masscan`. The purpose of this initial scan is to quickly determine which ports are open so that a more focused `nmap` scan can be performed that will target only the open ports discovered by `masscan`.
 
 ```
-root@kali:~/workspace/hackthebox/Access# masscan -e tun0 -p 1-65535 --rate 2000 10.10.10.98
+root@kali:~/workspace/hackthebox/Access# masscan -e tun0 -p 1-65535 --rate 2000 10.10.10.97
 ```
 
-From `masscan`, it was revealed that TCP ports 21 (FTP), 23 (Telnet), and 80 (HTTP) were listening for connections. Using this information, a second scan was run using `nmap` to more thoughoughly examine the services listening on the discovered ports.
+From `masscan`, it was revealed that TCP 8808, 80 (HTTP), and 8808 were listening for connections. Using this information, a second scan was run using `nmap` to more thoughoughly examine the services listening on the discovered ports.
 
 ```
-root@kali:~/workspace/hackthebox/Access# nmap -p 21,80,23 -sC -sV -oA scans/discovered-tcp 10.10.10.98 
+root@kali:~/workspace/hackthebox/Access# nmap -p 8808,80,445 -sC -sV -oA scans/discovered-tcp 10.10.10.97 
 ```
 
-As expected, the services listening for connections on Access were FTP, Telnet, and HTTP. A screenshot of the result of the `nmap` scan is shown below.
+As expected, the service listening on port 445 is SMB and the service listening on port 80 is Microsoft IIS HTTP. The resuts of the nmap scan suggests that the service lisetning on port 8808 is a Microsoft IIS HTTP service as well. The results of the nmap scan are shown below.
 
-![nmapresults](/assets/images/htb/access/nmapresults.png)
+![nmapresults.png](/assets/images/htb/secnotes/nmapresults.png)
 
-Of notable significance in this result is the "Anonymous FTP login allowed" line. This means that a user may access the FTP server running on Access as an anonymous user (with no password required). The process of accessing the FTP server in this manner is shown in the image below.
+Browsing to `http://10.10.10.97` contains a simple login page with an option to sign up for an account. The `login.php` index file hints that the server runs PHP code.
 
-![ftp](/assets/images/htb/access/ftp.png)
+![login_page.png](/assets/images/htb/secnotes/login_page.png)
 
-Two directories were found in the root directory of the FTP server; a `Backups` directory and an `Engineer` directory. Searching through these directories revealed two interesting files; `backup.mdb` in the `Backups` directory and `Access Control.zip` in the `Engineer` directory. The FTP command `get` can be used to transfer the remote files to the local testing host. Depending on the contents being transferred with `get`, it is often advisable to transfer the data in binary mode (as opposed to in ASCII (text) mode). Binary mode transfers data byte-for-byte while ASCII mode will convert line endings from those of the sending system to those of the receiving system. Binary mode can be enabled with the FTP `binary` command. 
-
-Once `backup.mdb` and `Access Control.zip` have been retrieved from the remote FTP server, they can be more thouroughly examined with the Linux `file` command. An example of this is demonstrated below.
+Browsing to `http://10.10.10.97:8808` unveils only the default Microsoft IIS page. The directory-busting tool `gobuster` was run at this time to enumerate any additional directories present on port 8808. The command to accomplish this is shown below.
 
 ```
-root@kali:~/workspace/hackthebox/Access# file backup.mdb; file 'Access Control.zip'
-backup.mdb: Microsoft Access Database
-Access Control.zip: Zip archive data, at least v2.0 to extract
+root@kali:~/workspace/hackthebox/SecNotes# gobuster dir -w /usr/share/wordlists/dirbuster/directory-list-2.3-medium.txt -u http://10.10.10.97:80
 ```
 
-As files with the `.mdb` extension are not commonly used in Linux environments, a little searching was required to determine how to work with this Microsoft Access Database file type. The [MDBOpener](https://www.mdbopener.com) website was used to upload the `backup.mdb` Microsoft Access Database base, extract the contents, and export the data in CSV format. After parsing through the various tables present within the backup database, the `auth_user` table was eventually found, the contents of which are shown in the image below.
+No additional directoriess were found as a result of the `gobuster` command.
 
-![authuser_csv](/assets/images/htb/access/authuser_csv.png)
-
-As the content within the `auth_user` table appears to contain username-password combinations, the username-password pairs were used in attempts to access the Telnet server running on TCP port 23 of the target system, but to no avail. Time to look elsewhere.
-
-Moving on to the second file retreived from the FTP server, the `'Access Control.zip'` file can be unziped using the `7z` tool, as shown below.
+While the `gobuster` tool was doing its work, an attempt to connect to to the SMB service on port 445 was made using the `smbclient` command shown below.
 
 ```
-root@kali:~/workspace/hackthebox/Access# 7z x 'Access Control.zip'
+root@kali:~/workspace/hackthebox/SecNotes# smbclient -L //10.10.10.97
 ```
 
-In this case, the file is password protected. Using the password `access4u@security` password found previously in the `auth_user` table within the Microsoft Access Database successfully unzips the `'Access Control.zip'` file, revealing the `'Access Control.pst'` file. Checking this file out with `file` reveals that the `.pst` file is a Microsoft Outlook email folder:
+This command aims to list the SMB shares, however the server did not allow for passwordless access in this case.
+
+![smb_attempt.png](/assets/images/htb/secnotes/smb_attempt.png)
+
+Continuing on with the page found at `http://10.10.10.97`, a new user account was created, as shown below.
+
+![new_account.png](/assets/images/htb/secnotes/new_account.png)
+
+Upon logging into the newly created account, the page shown below is reached. The basic page functionality is demonstrated.
+
+![web_function.gif](/assets/images/htb/secnotes/web_fucntion.gif)
+
+Moving back to the login page, basic SQL injection can be tested. If user data is not sanitized with a SQL querty, then sometimes login restrictions can be bypassed. A basic SQL injection string is shown below.
 
 ```
-root@kali:~/workspace/hackthebox/Access# file 'Access Control.pst'
-Access Control.pst: Microsoft Outlook email folder (>=2003)
+username' OR 1=1#
 ```
 
-After a little research, it was found that the `readpst` tool as provided by the `pst-utils` package can be used to read the information within a `.pst` file. If necessary, `pst-utils` can be installed with the `apt-get install pst-utils` command. After using `read-pst` to reclaim the contents within the `'Access Control.pst'` file, the `'Access Control.mbox'` file is returned.
 
-```
-root@kali:~/workspace/hackthebox/Access# file 'Access Control.mbox'
-Access Control.mbox: HTML document, UTF-8 Unicode text, with very long lines
-```
 
-As this contains UTF-8 Unicode text, it can be read using `vi`. A snippet of the contents within the `'Access Control.mbox'` file is shown below.
-
-```
-Hi there,
-
-The password for the “security” account has been changed to 4Cc3ssC0ntr0ller.  Please ensure this is passed on to your engineers.
-
-Regards,
-John
-```
-
-Thanks for the information, John. 
-
-The username `security` with the password `4Cc3ssC0ntr0ller` can be used to log in Access using `telnet`. At this point, the `user.txt` flag can be read. This process is shown in the screenshot below.
-
-![user_txt](/assets/images/htb/access/user_txt.png)
+Similar to another HackTheBox machine, Nightmare, the login page for SecNotes suffers from a form of SQL injection where a user 
 
 ## Root
 While running through the usual privelege escalation enumeration commands, something stood out as odd. After running the `net users administrator` command, it was revealed that the "Password Not Required" property has been set for the Administrator user. This means that the Administrator user is allowed passwordless logon to the system.
